✨ Make clock display seconds

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 			<div class="timeBlock">
 				<div class="clock">
 					<div id="hour"></div>
-					<div id="separator"></div>
+					<div class="separator"></div>
 					<div id="minutes"></div>
+					<div class="separator"></div>
+					<div id="seconds"></div>
 				</div>
 				<div id="greetings"></div>
 			</div>
